# envault-cli

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY_AUDIT.md  pyproject.toml
.claude/: settings.json
.claude/agents/: crypto-safety-inspector.md  migration-safety-checker.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  publish.yml
code/: decrypt.conf  decrypt.sh  encrypt.conf  encrypt.sh
docs/plans/: 2026-03-03-envault-design.md  2026-03-03-security-audit-fixes.md
infra/cdk/: app.py  requirements.txt
infra/cdk/stacks/: envault_stack.py
src/envault/: __init__.py  cli.py  config.py  crypto.py  exceptions.py  s3.py  state.py
tasks/: sre-availability-review.md
tests/: conftest.py
tests/unit/: test_boto_config.py  test_cli.py  test_config.py  test_crypto.py  test_s3.py  test_state.py
